--- a/index.html
+++ b/index.html
@@ -44,11 +44,18 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button id="save" type="button" class="btn btn-default primary" data-dismiss="modal" data-action="save-name">Save</button>
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
+
+    <div id="function-search">
+      <div class="input-group">
+        <input name="filter-functions" type="text" class="form-control" placeholder="function">
+      </div>
+      <div class='results'>
+      </div>
+    </div>
 
     <div class="toolbar">
       <h3 class="logo"><img src="img/cycle-shell.png">Cycle Shell</h3>
