finished function search

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
       <div class="input-group">
         <input name="filter-functions" type="text" class="form-control" placeholder="function">
       </div>
-      <div class='results'>
+      <div class='results-wrapper'>
+        <div class='results'></div>
       </div>
     </div>
 
