--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <p>One fine body&hellip;</p>
           </div>
           <div class="modal-footer">
+            <button id="save" type="button" class="btn btn-default primary" data-dismiss="modal" data-action="save-name">Save</button>
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
           </div>
         </div><!-- /.modal-content -->
